src/snapshots/syn_miette__tests__basic_parse.snap
---
source: src/lib.rs
expression: "test_parse::<DeriveInput>(\"struct Foo\", Behaviour::Bare)"
---
  × unexpected end of input, expected one of: `where`, parentheses, curly
  │ braces, `;`

