src/snapshots/syn_miette__tests__call_site-2.snap
---
source: src/lib.rs
expression: "render(Error::new(syn::Error::new(Span::call_site(),\n            \"the whole thing is fucked\"), \"this is the source code\"))"
---
  × the whole thing is fucked
   ╭────
 1 │ this is the source code
   · ▲
   · ╰── the whole thing is fucked
   ╰────

