src/snapshots/syn_miette__tests__call_site.snap
---
source: src/lib.rs
expression: "render(Error::from(syn::Error::new(Span::call_site(),\n            \"the whole thing is fucked\")))"
---
  × the whole thing is fucked

