src/snapshots/syn_miette__tests__combined-2.snap
---
source: src/lib.rs
expression: "test_parse::<UniqueIdents>(\"hello\\nworld\\nhello\", Behaviour::Bare)"
---
  × duplicate ident found

